# crazy-slop-stopper

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  SKILL.md  action.yml  pyproject.toml  vibecode-detection.md
.github/workflows/: vibecheck.yml
src/vibecheck/: __init__.py  atoms.toml  cli.py  patterns.py  rules.toml  scanner.py
