[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibecheck-slop-stopper"
version = "0.1.0"
description = "Detect AI-generated code before it ships."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kevin Qi", email = "kevin@qinnovate.com"}]
keywords = ["vibecode", "ai-detection", "code-review", "linting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
vibecheck = "vibecheck.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibecheck"]

[project.urls]
Homepage = "https://github.com/qinnovates/vibecheck-slop-stopper"
Issues = "https://github.com/qinnovates/vibecheck-slop-stopper/issues"
